feed page + profile + partner need ccs styling + still working on adding todo list with txt message notification reminder

--- a/public/css/profile.css
+++ b/public/css/profile.css
@@ -3,3 +3,6 @@
   color:#f3cd88;
  background-image: url('/Users/resilientcoders/Documents/rc2022A/week11/ppdCrudApp/public/img/thoughts.jpeg');
 }
+p.hide{
+  display: none;
+}
