--- a/views/partner.ejs
+++ b/views/partner.ejs
@@ -21,6 +21,8 @@
         <a href="/logout" class="btn btn-default btn-sm">Logout</a>
         <a href="/viewers" class="btn btn-default btn-sm">Home</a>
         <a href="/profile" class="btn btn-default btn-sm">Profile</a>
+        <a href="/relationship" class="btn btn-default btn-sm">Add Viewers</a>
+        <a href="/chart" class="btn btn-default btn-sm">View charts</a>
     </div>
 
     <div class="row">
