--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -69,6 +69,9 @@
         <li class="message">
           <a href="/journalEntries/<%= journalEntries[i]._id %>">
             <h4> Date: <%= journalEntries[i].date %></h4>
+          </a> 
+            <span><i class="fa fa-star"></i></span> 
+            <span><i class="fa fa-trash"></i></span> 
           </a>  
         </li>
       <% } %>
