--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,46 +1,46 @@
-<!doctype html>
-<html>
+<!DOCTYPE html>
+<html lang="en">
+
 <head>
-    <title>Movie Rater</title>
+  <meta charset="utf-8">
+  <meta name="description" content="Your description goes here">
+  <meta name="keywords" content="one, two, three">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css">
-    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css">
-    <!-- <link rel="stylesheet" href="style.css"> -->
-    <link rel="stylesheet" href="css/index.css">
-
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Fredericka+the+Great&family=Fruktur&family=Rubik+Glitch&display=swap" rel="stylesheet">
+  <title>WhoWeAre</title>
+  <script src="https://kit.fontawesome.com/fec081edb2.js" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css">
+  <link rel="stylesheet" href="css/index.css">
+  <!-- <link rel="stylesheet" href="style.css"> -->
 </head>
-<body id="indexLanding">
-<div class="container">
+<body>
+  <header>
+    <h1>Post Partum Direction</h1>
+    <nav>
+  <a href="/profile">Profile</a>
+  <a href="/logout" class="btn btn-default btn-sm">Logout</a>
+  </nav>
+  
+  <section class="ladySmiling">
 
-    <div class="jumbotron text-center">
-        <h1>Post Partum Direction</h1>
-        <img src="img/index.gif" alt="Coffee mug">
+    <section class="words">Ellen Pallen wants to build a more inclusive Silcon Valley</section>
+  </section>
+  <nav>
+  <section class="bottomBox">
+   
+    <section class="img">
+    <img class="ad" src="images/">
+  </section>
 
-        <!-- <p>Start Order</p>
+   <h4 class="title">From Vampire Slayer to Entrepreneur: Buffy Rings the Nasdaq Bell </h4>
+      <span class="leftSpan">BERNICE MAG</span>
+      <span class="rightSpan">January 11 2017 5:26pm</span>
+</section>   
+</body>
+</html>   
 
-        <a href="/orderSystem" class="btn btn-default"><span class="fa fa-user"></span>Start an Order</a> -->
 
-        <p>User Login</p>
-        <a href="/login" class="btn btn-default"><span class="fa fa-user"></span>Login</a>
-        <a href="/signup" class="btn btn-default"><span class="fa fa-user"></span>Signup</a>
+<script src="main.js"></script>
 
-        <fieldset>
-            <legend>Not A User but a Viewer?</legend>
-
-            <label for="cars">Which viewer are you?? :</label>
-                
-                <select id="viewerType" name="viewerType">
-                  <option value="doctor">Doctor</option>
-                  <option value="partner">Partner</option>
-                  <option value="lovedOne">LovedOne</option>
-                </select>
-        </fieldset>
-
-    </div>
-
-</div>
 </body>
 </html>
