--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,7 +7,7 @@
   <meta name="keywords" content="one, two, three">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>WhoWeAre</title>
+  <title>Index</title>
   <script src="https://kit.fontawesome.com/fec081edb2.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css">
   <link rel="stylesheet" href="css/index.css">
