--- a/views/whoWeAre.ejs
+++ b/views/whoWeAre.ejs
@@ -15,23 +15,13 @@
     
       <title>WhoWeAre</title>
       <script src="https://kit.fontawesome.com/fec081edb2.js" crossorigin="anonymous"></script>
-      <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css">
-      <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css">
       <link rel="stylesheet" href="css/WhoWeAre.css">
       <!-- <link rel="stylesheet" href="style.css"> -->
     </head>
     <body>
       <header>
 
-      <h1>Post Partum Direction</h1>
-        <nav>
-      <a href="/profile">Profile</a>
-      <a href="/logout" class="btn btn-default btn-sm">Logout</a>
-      </nav>
-
-        <section class="logo">
-          <img src="img/">
-        </section>
+         <h1> Post Partum Direction</h1>
         <nav>
           <ul>
             <!-- <button url class="flowerButttons" type="button"><span>
@@ -40,34 +30,54 @@
 
             </span></button> -->
             
-            
-
-          <a><li><button id="flowerButttons"> NAME</button> </li></a> 
-            <li>News<i class="fas fa-chevron-down"></i></li>
-            <li>Events<i class="fas fa-chevron-down"></i></li>
-            <li>Research<i class="fa-solid fa-flower"></i></li>
-            <li>Sign up<i class="fas fa-chevron-down"></i></li>
-            <li>login<i class="fas fa-chevron-down"></i></li>
-            <l1><i class="fas fa-search"></i></l1>
-            <li><i class="fa fa-leaf fa-2x" aria-hidden="true"></i></li>
+    
+            <a href="/whoWeAre"> <li> <i class="fa fa-leaf fa" aria-hidden="true">Who We Are</i></li></a>
+            <a href="/profile"> <li><i class="fa fa-leaf fa" aria-hidden="true"> Profile</i></li></a>
+            <a href="/signup"> <li> <i class="fa fa-leaf fa" aria-hidden="true">Sign Up</i></li></a>
+            <a href="/login"> <li><i class="fa fa-leaf fa" aria-hidden="true">Log In</i></li></a>
+            <a href="/logout"> <li><i class="fa fa-leaf fa" aria-hidden="true">Log Out</i></li></a>
+            <li><i class="fa fa-leaf fa" aria-hidden="true">Events</i></li>
+            <li><i class="fa fa-leaf fa" aria-hidden="true">News</i></li>
           </ul>
         </nav>
       </header>
     
       <section class="ladySmiling">
-    
-        <section class="words">Ellen Pallen wants to build a more inclusive Silcon Valley</section>
-      </section>
-    
+
+     </section>
+       
+   <section class="bio">
+    <section class="words">
+      <h2>Who Are We?</h2>
+    </section>
+          <section class="first-TopPic">
+            <img src="/img/logo.jpg">
+         </section>
+         Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ratione, numquam reprehenderit sunt sit veritatis id distinctio nostrum consequuntur culpa! Ex labore nemo animi consequuntur nisi in exercitationem quasi quisquam facilis!
+         Atque similique animi odio architecto ipsum minus illo, ut illum molestiae! Molestias expedita unde numquam, eos iure totam excepturi iusto sed illum eligendi a nulla quod harum omnis sequi repudiandae.
+         Incidunt nobis doloribus molestiae odit dignissimos illo? Rem, fuga saepe. Voluptatum sapiente ipsa necessitatibus, cumque accusantium, officia, optio voluptates maiores facilis vero suscipit illo repudiandae corporis tenetur hic odio. Nobis.
+         Repudiandae, enim. Quo totam eius repellat eligendi. At dolorem, quisquam porro possimus quaerat sint non qui nihil fuga a magnam aut facilis quia libero? Vel impedit repudiandae ipsum odio veritatis?
+         Dolores nobis esse odio quas! Ea repellendus dolore aliquam, cupiditate qui tenetur sint quidem ad,
+         <section class="bottom-TopPic">
+          <img src='/img/bottomTopPic.jpg'>
+       </section>
+         molestiae eveniet blanditiis totam, quo ullam dicta. Aspernatur, mollitia. Voluptatem sapiente expedita harum eveniet? Autem.
+         Soluta eius unde eaque, ducimus sapiente assumenda adipisci reiciendis. Accusantium officia distinctio, facere soluta voluptate modi cum, rerum excepturi architecto laboriosam amet atque vel sunt dignissimos voluptatem error perspiciatis dolore.
+         Accusamus iure vero corrupti facere autem laborum explicabo, ipsam eveniet nam excepturi quibusdam dolor nihil ullam? Iure illo animi velit omnis eum minus nulla alias consectetur eaque minima, doloremque corporis?
+         Nulla voluptates voluptate, at dicta magnam ex quibusdam cum quo quas nesciunt molestias autem, sed beatae explicabo inventore, soluta vitae delectus. Laborum repudiandae dolorem sit, id dolorum delectus iure corporis?
+       ecto, rerum unde eos voluptatum alias iste sapiente. Quis voluptatibus provident corporis aut, quas magni. Necessitatibus, modi dolorem aperiam es
+       
+   </section>
+
       <section class="bottomBox">
        
         <section class="img">
         <img class="ad" src="images/ad.jpg">
       </section>
     
-       <h4 class="title">From Vampire Slayer to Entrepreneur: Buffy Rings the Nasdaq Bell </h4>
-          <span class="leftSpan">BERNICE MAG</span>
-          <span class="rightSpan">January 11 2017 5:26pm</span>
+       <h4 class="title">Post Partum Direction Copyright ©2022 </h4>
+          <span class="rightSpan">Carla Hores</span>
+            
     </section>   
     </body>
     </html>   
