--- a/views/relationship.ejs
+++ b/views/relationship.ejs
@@ -19,23 +19,30 @@
     <h3>Add an email:</h3>
       <label for="email">Enter your email:</label>
       <input type="email" id="email" name="email">
+      <input type="email" id="userId" name="email">
+
       <button class="addPerson" type="button"></button>
  </form>
 
 
         
  <% console.log( 'this is all users', allUsers[0]) %> 
- <% console.log( 'this addes from rekationships', allUsers[0]._id) %> 
+
  <ul class="ListOfUsers">
   <% for(var i=0; i < allUsers[0].relationship.length; i++) {%>
     <li class="message">
-      <span> <%= allUsers.relationship[i].email %> </span>
+      <span style="<%= allUsers[0].relationship[i].isStarred ? 'color:green' : 'color:black' %>"> <%=  allUsers[0].relationship[i].email %> </span>
     </li>
-    <span><i class="fa fa-star"></i></span> 
-            <span><i class="fa fa-trash"></i></span> 
+
+    <span><%= user._id %></span>
+
+    <span><i data-userIsStarred="<%= allUsers[0].relationship[i].isStarred %>" data-index="<%= i %>" class="fa fa-star"></i></span> 
+            <span><i  data-index="<%= i %>"class="fa fa-trash"></i></span> 
             <span><%= i %></span>
   <% } %>
   </ul>
+
+
 
 
 
